# kosim

./: readme
src/: .gitignore  CMakeLists.txt  CMakeLists.txt_verilator  CMakeLists_backbone.txt  CMakeLists_boost_interprocess_tests.txt  CMakeLists_boost_log_tests.txt  CMakeLists_no_example.txt  CMakeLists_sim_accel.txt  build.sh  build_clean  build_examples.sh  build_fw.sh  kosim.cfg
src/examples/generic_cpu/test1/: CMakeLists.txt  gc_main.cpp  gc_main.h  gc_test_target.cpp  gen_from_sysrdl.cpp  gen_from_sysrdl.h  generic_cpu.cpp  generic_cpu.h
src/examples/generic_cpu/test2/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  gen_from_sysrdl.cpp  generic_cpu.cpp  generic_cpu.cpp_to_move_to_another_test
src/examples/generic_cpu/test3/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  gc_test_target.h  gen_from_sysrdl.cpp  gen_from_sysrdl.h  generic_cpu.cpp
src/examples/generic_cpu/test4/: CMakeLists.txt  gc_main.cpp  gc_main.h  gc_test_target.cpp  gc_test_target.h  gen_from_sysrdl.cpp  gen_from_sysrdl.h  generic_cpu.cpp  generic_cpu.h
src/examples/generic_cpu/test5/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  gc_test_target.h  gen_from_sysrdl.cpp  generic_cpu.cpp
src/examples/generic_cpu/test5_1/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  gc_test_target.h  gen_from_sysrdl.cpp  gen_from_sysrdl.h  generic_cpu.cpp  generic_cpu.h
src/examples/generic_cpu/test5_2/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  generic_cpu.cpp  generic_cpu.h
src/examples/sc/simple_bus/: CMakeLists.txt  simple_bus_main.cpp  simple_bus_test.h
src/examples/sc/simple_fifo/: CMakeLists.txt  first_class.cpp  first_class.h  simple_fifo.cpp  simple_fifo.h
src/examples/scv/pythagoras/: CMakeLists.txt  pythagoras.cpp  pythagoras.h
src/examples/sim_accel/test1/: CMakeLists.txt  gc_main.cpp  gc_test_target.cpp  gc_test_target.h  gen_from_sysrdl.cpp  gen_from_sysrdl.h  generic_cpu.cpp  generic_cpu.h
src/first_class/: CMakeLists.txt  first_class.cpp  first_class.h
src/generic_cpu/: CMakeLists.txt  \  b_initiator.cpp  b_initiator.h  b_ipc_target.cpp  b_ipc_target.h  b_mux.h  b_router.h  b_target.cpp  b_target.h  gc_interrupt_controller.h  gc_ipc_target.cpp  gc_ipc_target.h  gc_main.cpp  gc_main.h  gc_memory.cpp  gc_memory.h  gc_router.h  gc_target.cpp  gc_target.h  gen_from_sysrdl.h  generic_cpu.cpp  generic_cpu.h  generic_cpu_base.cpp  generic_cpu_base.h
src/hierarchy_scanner/: .gitignore  CMakeLists.txt  hierarchy_scanner.cpp  hierarchy_scanner.h
src/ipc_adapter/: CMakeLists.txt  \  initiator_adapter.cpp  initiator_adapter.h  target_adapter.cpp  target_adapter.h  target_sm.cpp  target_sm.h
src/ipc_adapter/doc/: SC_acceleration.odt
src/logging/: CMakeLists.txt  log_builder.cpp  log_builder.h
src/main/: CMakeLists.txt  CMakeListsSCSimpleFifo.txt  hello.h  hello.py  main.cpp  wrap_first_class.cpp  wrap_hello.cpp  wrap_hello.h
src/main/boost_interprocess/sm_anonym_cond_1/: CMakeLists.txt  README  main.cpp
src/main/boost_interprocess/sm_anonym_cond_2/: CMakeLists.txt  README  main.cpp
src/main/boost_interprocess/sm_mapped_region/: CMakeLists.txt  main.cpp
src/main/boost_interprocess/sm_named_pool/: CMakeLists.txt  main.cpp
src/main/boost_interprocess/sm_scoped_lock_1/: CMakeLists.txt  README  main.cpp
src/main/boost_interprocess/sm_scoped_lock_2/: CMakeLists.txt  README  main.cpp
src/main/boost_interprocess/sm_unnamed_pool/: CMakeLists.txt  main.cpp
src/main/boost_log/advanced_usage/: CMakeLists.txt  main.cpp
src/main/boost_log/async_log/: CMakeLists.txt  main.cpp
src/main/boost_log/basic_usage/: CMakeLists.txt  main.cpp
src/main/boost_log/event_log/: CMakeLists.txt  main.cpp
src/main/boost_log/multiple_files/: main.cpp
src/main/boost_log/multiple_threads/: CMakeLists.txt  main.cpp
src/main/boost_log/rotating_file/: CMakeLists.txt  main.cpp
src/main/boost_log/settings_file/: CMakeLists.txt  main.cpp
src/main/boost_log/syslog/: CMakeLists.txt  main.cpp
src/main/boost_log/trivial/: CMakeLists.txt  main.cpp
src/main/boost_log/xml_file/: CMakeLists.txt  main.cpp
src/main/generic_cpu/: CMakeLists.txt  Makefile  build_po_links.sh  build_program_options_links.py  build_program_options_links.sh  generic_cpu.cfg  generic_cpu.py  program_options.cpp  program_options.h  wrap_generic_cpu.cpp
src/main/generic_cpu/test1/: CMakeLists.txt  build_program_options_links.py  generic_cpu.py  wrap_generic_cpu.cpp
src/main/generic_cpu/test2/: CMakeLists.txt  generic_cpu.py  (+3 more)
src/main/sc_simple_bus/: CMakeLists.txt  Makefile  cmake_install.cmake
src/main/sc_simple_fifo/: CMakeLists.txt  hello.cpp  simple_fifo.py
src/main/scv_pythagoras/: CMakeLists.txt  wrap_pythagoras.cpp
src/main/tlm/: .gitignore
src/main/tlm_blocking_transport/: CMakeLists.txt  wrap_blocking_transport.cpp
src/main/tlm_doulos_tutorial1/: CMakeLists.txt  doulos_tutorial1.py  tutorial1.py  wrap_doulos_tutorial1.cpp
src/main/tlm_doulos_tutorial2/: CMakeLists.txt  wrap_doulos_tutorial2.cpp
src/main/tlm_doulos_tutorial3/: CMakeLists.txt  doulos_tutorial3.py  wrap_doulos_tutorial3.cpp
src/main/tlm_doulos_tutorial4/: CMakeLists.txt  doulos_tutorial4.py  wrap_doulos_tutorial4.cpp
src/main/tlm_doulos_tutorial5/: CMakeLists.txt  wrap_doulos_tutorial5.cpp
src/main/tlm_doulos_tutorial6/: CMakeLists.txt  wrap_doulos_tutorial6.cpp
src/main/tlm_doulos_tutorial7/: CMakeLists.txt  doulos_tutorial7.py
src/main/tlm_tlm2_getting_started_2/: CMakeLists.txt  tlm2_getting_started_2.py  wrap_tlm2_getting_started_2.cpp
src/memory_map/: CMakeLists.txt  memory_map.cpp  memory_map.h  memory_map_builder.cpp  memory_map_builder.h
src/program_options/: CMakeLists.txt  \  options_builder.cpp  options_builder.h  program_options.cpp  program_options.h  program_options_base.cpp  program_options_base.h
src/simple_fifo/: CMakeLists.txt  simple_fifo.cpp  simple_fifo.h
src/utils/: CMakeLists.txt  time_out_monitor.cpp  time_out_monitor.h
src/verilator/i2c_opencores/: CMakeLists.txt  Vi2c_master_test.h  Vi2c_master_top.cpp  Vi2c_master_top.h  Vi2c_master_top__Syms.cpp  Vi2c_master_top__Syms.h
(+116 files in other folders)
